add kp util, service and controller